--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,12 @@ addons:
     packages:
         #- build-essential
         - inkscape
-        
+
+# Skip pip install
+install: true
 
 script:
     - which make
     - echo "make TARGET='$TARGETS' $MAKETARGET"
-    - for i in $TARGETS; do \
-          which make
-          echo "make TARGET=$i $MAKETARGET"; \
-          make TARGET=$i $MAKETARGET; \
-      done
+    - for i in $TARGETS; do echo "make TARGET=$i $MAKETARGET"; done
+    - for i in $TARGETS; do make TARGET=$i $MAKETARGET; done
